# mldsa-multisig-benchmarking

./: .gitignore  Cargo.toml  NOTES.md  PROMPT.md  README.md  RESULTS.md  SPEC.md  loop.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: circuit-adversary.md
binius-proof-runner/: Cargo.toml
binius-proof-runner/src/: main.rs
binius-prover/: Cargo.toml
binius-prover/src/: decode.rs  field.rs  lib.rs  main.rs  ntt.rs  sampling.rs  shake.rs  usehint.rs  verify.rs
binius-prover/tests/: xcheck.rs
default-verifier/: Cargo.toml
default-verifier/benches/: verify.rs
default-verifier/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
ml-dsa/: Cargo.toml
ml-dsa/src/: lib.rs  verifying.rs
policy/: Cargo.toml
policy/src/: lib.rs
signing/: Cargo.toml
signing/src/: lib.rs
sp1-prover/: Cargo.toml  build.rs
sp1-prover/benches/: prove.rs
sp1-prover/program/: Cargo.toml
sp1-prover/program/src/: main.rs
sp1-prover/src/: lib.rs  main.rs
