[workspace]
resolver = "3"
members = ["ml-dsa", "policy", "signing", "default-verifier", "demo", "sp1-prover"]
# The SP1 guest is its own workspace and is built for the zkVM target by
# sp1-prover/build.rs — keep it out of the host workspace build.
exclude = ["sp1-prover/program"]

[workspace.dependencies]
ml-dsa = { path = "ml-dsa" }

# Required because the editable `ml-dsa` crate declares `[lints] workspace = true`.
# Empty is fine: it satisfies the inheritance without applying any extra lints.
[workspace.lints]
