# Out-of-process Binius64 proof generator for the `binius-prover` crate's M6 step.
#
# WHY THIS CRATE EXISTS: the upstream proving crate is itself named `binius-prover`,
# identical to our public crate. If it appears anywhere in our crate's dependency
# closure, the frozen oracle command `cargo test -p binius-prover` becomes ambiguous
# ("specification `binius-prover` is ambiguous"). So the upstream prover/verifier live
# HERE, in a crate that is EXCLUDED from the workspace and never a dependency of
# `binius-prover`; the library drives it as a subprocess over serialized
# constraint-system + witness files. An empty `[workspace]` table makes this its own
# workspace root (so building it via `--manifest-path` does not re-enter the parent).
[package]
name = "binius-proof-runner"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "binius-proof-runner"
path = "src/main.rs"

[dependencies]
# Same pinned rev as `binius-prover` so the serialized constraint-system / witness
# wire formats match exactly across the process boundary.
binius-core     = { git = "https://github.com/binius-zk/binius64", rev = "8f21b348fe8e8327b63ffa06884bf1783d40635f" }
binius-prover   = { git = "https://github.com/binius-zk/binius64", rev = "8f21b348fe8e8327b63ffa06884bf1783d40635f" }
binius-verifier = { git = "https://github.com/binius-zk/binius64", rev = "8f21b348fe8e8327b63ffa06884bf1783d40635f" }
binius-hash     = { git = "https://github.com/binius-zk/binius64", rev = "8f21b348fe8e8327b63ffa06884bf1783d40635f", features = ["rayon"] }
binius-utils    = { git = "https://github.com/binius-zk/binius64", rev = "8f21b348fe8e8327b63ffa06884bf1783d40635f" }

[profile.release]
opt-level = 3
